# Ottawa_chatbot

./: .env.example  .gitignore  About Ottawa.docx  Healtcare.docx  Housing and Healthcare Dataset.xlsx  README.md  config.py  for_beginner.md  main.py  model_factory.py  pyproject.toml  rag_chain.py  requirements.txt  web_fallback.py
.github/workflows/: ci.yml
docs/: developer_guide.md
docs1/: Housing and rentals.docx
ottawa_chatbot/: .env  .env.example  .gitignore  README.md  requirements.txt
ottawa_chatbot/backend/: run_server.py  vector_store_sqlite.py
ottawa_chatbot/backend/app/: config.py  main.py
ottawa_chatbot/deployment/: Dockerfile  docker-compose.yml  nginx.conf  render.yaml
ottawa_chatbot/docs/: IMPLEMENTATION_SUMMARY.md  IRCC Study Permit Guide for Newcomers in Ottawa.docx  evaluation-report.md  retrieval-speed-evaluation.md  user-guide.md
ottawa_chatbot/frontend/: chat_sessions.json  chatbot-ui.js  index.html  streamlit_app.py  styles.css
ottawa_chatbot/scripts/: __init__.py  build_dataset.py  ingest_local_sqlite.py  run_retrieval_speed_eval.py  run_tests.py  upload_to_vectorstore.py
public/: style.css
retriever/: ingest.py  vector_store.py
src/ottawa_assistant/: __init__.py  chat_service.py  config.py  logging_utils.py  main.py  model_factory.py  prompts.py  rag_chain.py  utils.py  web_fallback.py
tests/integration/: test_integration.py
tests/unit/: test_chat_service.py  test_config.py  test_ingest.py  test_prompts.py  test_rag_chain.py  test_utils.py  test_vector_store.py  test_web_fallback.py
(+21 files in other folders)
